# center_pos

./: .gitignore  CMakeLists.txt  center_pos.rc  logger.cpp  main.cpp  visionprocess.cpp  visionprocessapi.cpp
include/: logger.h  visionprocess.h  visionprocessapi.h
